# MCP

./: .env  .env.example  pyproject.toml
data/notes/: hello.txt
scripts/: test_client.py
src/data/notes/: hello.txt
src/mcp_playground/: __main__.py  app.py  config.py  http_routes.py  logging.py  server.py
src/mcp_playground/resources/: project_resources.py
src/mcp_playground/services/: clock.py  file_service.py  llm_service.py
src/mcp_playground/tools/: file_tools.py  llm_tools.py  math_tools.py  system_tools.py
