[project]
name = "mcp-test"
version = "0.1.0"
description = ""
authors = [
    {name = "saparbegov_01",email = "zidan_2002@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "mcp (>=1.26.0,<2.0.0)",
    "openai (>=2.30.0,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
